--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@prisma/client": "^5.16.1",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
@@ -22,5 +23,9 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "use-debounce": "^9.0.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.16.1",
+    "supabase": "^1.178.2"
   }
 }
