--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres.hzojznegetktvwkayxdw:2pz78sZ9xKATWI2q@aws-0-eu-west-2.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgresql://postgres.hzojznegetktvwkayxdw:2pz78sZ9xKATWI2q@aws-0-eu-west-2.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
